[gd_scene load_steps=12 format=2]

[ext_resource path="res://Montreal.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Perso.gd" type="Script" id=2]
[ext_resource path="res://assets/vievb.png" type="Texture" id=4]
[ext_resource path="res://assets/viep.png" type="Texture" id=5]
[ext_resource path="res://assets/MenuBoutonDisabled.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Skill.gd" type="Script" id=9]
[ext_resource path="res://assets/MenuHarry++.png" type="Texture" id=10]
[ext_resource path="res://assets/MenuHarryBoutonFocus.png" type="Texture" id=11]
[ext_resource path="res://assets/MenuHarryBouton.png" type="Texture" id=12]
[ext_resource path="res://assets/MenuHarryBoutonPressed.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Neutre",
"speed": 3.0
}, {
"frames": [  ],
"loop": false,
"name": "Blesse",
"speed": 6.0
}, {
"frames": [  ],
"loop": true,
"name": "Inquiet",
"speed": 3.0
}, {
"frames": [  ],
"loop": true,
"name": "Fatigue",
"speed": 3.0
}, {
"frames": [  ],
"loop": true,
"name": "Prisonnier",
"speed": 3.0
}, {
"frames": [  ],
"loop": true,
"name": "Enerve",
"speed": 3.0
}, {
"frames": [  ],
"loop": true,
"name": "KO",
"speed": 3.0
}, {
"frames": [  ],
"loop": true,
"name": "Triste",
"speed": 3.0
}, {
"frames": [  ],
"loop": true,
"name": "Content",
"speed": 3.0
} ]

[node name="Perso" type="HBoxContainer" groups=["AllieGroupe", "CombattantGroupe"]]
margin_right = 618.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CadreMenu" type="MarginContainer" parent="."]
margin_right = 364.0
margin_bottom = 280.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="CadreMenu"]
margin_right = 359.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )

[node name="Menu" type="MarginContainer" parent="CadreMenu/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CadreMenu/Background/Menu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 344.0
margin_bottom = 265.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CadreMenu/Background/Menu/VBoxContainer"]
margin_right = 339.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
columns = 2

[node name="Skill1o" type="Button" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer"]
visible = false
margin_right = 172.0
margin_bottom = 48.0
focus_neighbour_left = NodePath("../Skill2o")
focus_neighbour_top = NodePath("../Skill5o")
focus_neighbour_right = NodePath("../Skill2o")
focus_neighbour_bottom = NodePath("../Skill3o")
focus_next = NodePath("../Skill2o")
focus_previous = NodePath("../Skill5o")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
button_mask = 0
text = "Skill1"

[node name="Skill2o" type="Button" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer"]
visible = false
margin_right = 172.0
margin_bottom = 48.0
focus_neighbour_left = NodePath("../Skill1o")
focus_neighbour_top = NodePath("../Skill4o")
focus_neighbour_right = NodePath("../Skill1o")
focus_neighbour_bottom = NodePath("../Skill4o")
focus_next = NodePath("../Skill3o")
focus_previous = NodePath("../Skill1o")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
button_mask = 0
text = "Skill2"

[node name="Skill3o" type="Button" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer"]
visible = false
margin_right = 172.0
margin_bottom = 72.0
focus_neighbour_left = NodePath("../Skill4o")
focus_neighbour_top = NodePath("../Skill1o")
focus_neighbour_right = NodePath("../Skill4o")
focus_neighbour_bottom = NodePath("../Skill5o")
focus_next = NodePath("../Skill4o")
focus_previous = NodePath("../Skill2o")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
button_mask = 0
text = "Skill3"

[node name="Skill4o" type="Button" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer"]
visible = false
margin_right = 172.0
margin_bottom = 72.0
focus_neighbour_left = NodePath("../Skill3o")
focus_neighbour_top = NodePath("../Skill2o")
focus_neighbour_right = NodePath("../Skill3o")
focus_neighbour_bottom = NodePath("../Skill2o")
focus_next = NodePath("../Skill5o")
focus_previous = NodePath("../Skill3o")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
button_mask = 0
text = "Skill4"

[node name="Skill5o" type="Button" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer"]
visible = false
margin_right = 172.0
margin_bottom = 144.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Skill3o")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Skill1o")
focus_next = NodePath("../Skill1o")
focus_previous = NodePath("../Skill4o")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
button_mask = 0
text = "Skill5"

[node name="Skill1" type="TextureButton" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer" groups=["CharaButtons"]]
margin_right = 167.0
margin_bottom = 42.0
focus_neighbour_left = NodePath("../Skill2")
focus_neighbour_top = NodePath("../Skill5")
focus_neighbour_right = NodePath("../Skill2")
focus_neighbour_bottom = NodePath("../Skill3")
focus_next = NodePath(".")
focus_previous = NodePath(".")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
button_mask = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 11 )
expand = true
script = ExtResource( 9 )

[node name="SkillName" type="Label" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer/Skill1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -21.0
margin_right = 82.5
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Skill1"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill2" type="TextureButton" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer" groups=["CharaButtons"]]
margin_left = 171.0
margin_right = 338.0
margin_bottom = 42.0
focus_neighbour_left = NodePath("../Skill1")
focus_neighbour_top = NodePath("../Skill4")
focus_neighbour_right = NodePath("../Skill1")
focus_neighbour_bottom = NodePath("../Skill4")
focus_next = NodePath(".")
focus_previous = NodePath(".")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
button_mask = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 11 )
expand = true
script = ExtResource( 9 )

[node name="SkillName" type="Label" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer/Skill2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -21.0
margin_right = 82.5
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Skill2"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill3" type="TextureButton" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer" groups=["CharaButtons"]]
margin_top = 46.0
margin_right = 167.0
margin_bottom = 88.0
focus_neighbour_left = NodePath("../Skill4")
focus_neighbour_top = NodePath("../Skill1")
focus_neighbour_right = NodePath("../Skill4")
focus_neighbour_bottom = NodePath("../Skill5")
focus_next = NodePath(".")
focus_previous = NodePath(".")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
button_mask = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 11 )
expand = true
script = ExtResource( 9 )

[node name="SkillName" type="Label" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer/Skill3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -21.0
margin_right = 82.5
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Skill3"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill4" type="TextureButton" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer" groups=["CharaButtons"]]
margin_left = 171.0
margin_top = 46.0
margin_right = 338.0
margin_bottom = 88.0
focus_neighbour_left = NodePath("../Skill3")
focus_neighbour_top = NodePath("../Skill2")
focus_neighbour_right = NodePath("../Skill3")
focus_neighbour_bottom = NodePath("../Skill2")
focus_next = NodePath(".")
focus_previous = NodePath(".")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
button_mask = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 11 )
expand = true
script = ExtResource( 9 )

[node name="SkillName" type="Label" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer/Skill4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -21.0
margin_right = 82.5
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Skill4"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill5" type="TextureButton" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer" groups=["CharaButtons"]]
margin_top = 92.0
margin_right = 167.0
margin_bottom = 134.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Skill3")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Skill1")
focus_next = NodePath(".")
focus_previous = NodePath(".")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
button_mask = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 11 )
expand = true
script = ExtResource( 9 )

[node name="SkillName" type="Label" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer/Skill5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -22.0
margin_right = 82.5
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "Skill5"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PV" type="Label" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer"]
margin_left = 171.0
margin_top = 102.0
margin_right = 338.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "PV : 1 / 1"
align = 1

[node name="Séparation" type="ColorRect" parent="CadreMenu/Background/Menu/VBoxContainer"]
margin_top = 152.0
margin_right = 339.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08

[node name="MarginContainer" type="MarginContainer" parent="CadreMenu/Background/Menu/VBoxContainer"]
margin_top = 162.0
margin_right = 339.0
margin_bottom = 260.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Description" type="Label" parent="CadreMenu/Background/Menu/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 334.0
margin_bottom = 93.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
text = "Lorem Ipsum"
autowrap = true
clip_text = true

[node name="Portrait" type="MarginContainer" parent="."]
margin_left = 368.0
margin_right = 618.0
margin_bottom = 280.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Portrait"]
margin_left = 5.0
margin_right = 245.0
margin_bottom = 280.0

[node name="Cadre" type="Panel" parent="Portrait/VBoxContainer"]
margin_right = 240.0
margin_bottom = 240.0
rect_min_size = Vector2( 240, 240 )

[node name="Sprite" type="AnimatedSprite" parent="Portrait/VBoxContainer/Cadre"]
position = Vector2( 120, 120 )
frames = SubResource( 1 )
animation = "Prisonnier"
playing = true

[node name="LifeBar" type="TextureProgress" parent="Portrait/VBoxContainer"]
margin_top = 244.0
margin_right = 240.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 36 )
max_value = 2.0
value = 1.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
